--- a/statistika.html
+++ b/statistika.html
@@ -49,8 +49,8 @@
     <div id="komunal">Komunal</div>
     <div id="erzaq">Ərzaq</div>
     <div id="neqliyyat">Nəqliyyat</div>
-    <div id="kafe">Kafe/Restoran</div>
     <div id="geyim">Geyim</div>
+    <div id="kafe">Digər</div>
     
 </div>
 </div>
@@ -70,8 +70,8 @@
       <a data-toggle="modal" data-target="#exampleModal" data-category="Komunal" class="dropdown-item" href="#">Komunal</a>
       <a data-toggle="modal" data-target="#exampleModal" data-category="Ərzaq" class="dropdown-item" href="#">Ərzaq</a>
       <a data-toggle="modal" data-target="#exampleModal" data-category="Nəqliyyat" class="dropdown-item" href="#">Nəqliyyat</a>
-      <a data-toggle="modal" data-target="#exampleModal" data-category="Kafe/Restoran" class="dropdown-item" href="#">Kafe/Restoran</a>
       <a data-toggle="modal" data-target="#exampleModal" data-category="Geyim" class="dropdown-item" href="#">Geyim</a>
+      <a data-toggle="modal" data-target="#exampleModal" data-category="Digər" class="dropdown-item" href="#">Digər</a>
     </div>
   </div>
 
