--- a/xerc.html
+++ b/xerc.html
@@ -172,7 +172,7 @@
 
 
 
-<nav class="bg-light fixed-bottom" style="margin-top: 65px;">
+<nav class="bg-light fixed-bottom" style="margin-top: 105px; width: 375px;">
     <div style="position: relative; bottom: 0px;" class="d-flex justify-content-around">
         <div class="d-flex flex-column align-items-center justify-content-center m-0 p-0">
             <i style="width: 25px; height: 25px; color: grey;" class="d-flex justify-content-center align-items-center fas fa-home m-0 p-0"></i>
@@ -200,7 +200,6 @@
         </div>
     </div>
 </nav>
-
 
         <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
