--- a/kateqoriya.html
+++ b/kateqoriya.html
@@ -111,6 +111,13 @@
                   <i class="fas colorred ml-1 fa-trash p-1"></i>
                 </div>
             </div>
+            <div class="d-flex justify-content-between pt-2 pb-2 mb-2 col-12" style="border:  1px solid #ff0038; border-radius: 4px;">
+              <div class="font1">7. Başqa</div>
+              <div>
+                <i class="fas colorred mr-1 fa-pen p-1"></i>
+                <i class="fas colorred ml-1 fa-trash p-1"></i>
+              </div>
+          </div>
               
 
           </select>
