added google graphs

--- a/arzu.html
+++ b/arzu.html
@@ -55,6 +55,35 @@
                               </div>
 
 
+                              <div class="dropdown  w-100">
+                                <button id="arzu1hesablar" class="btn btn-secondary dropdown-toggle col-12 m-0" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-expanded="false">
+                                  Hesablar
+                                </button>
+                                <div class="dropdown-menu w-100" aria-labelledby="dropdownMenuButton">
+                                  <a id="arzu1kart1" class="dropdown-item border-bottom" href="#">
+                                    <div class="d-flex justify-content-between align-items-center">
+                                      <div>
+                                        <div style="font-size: 15px;">Kart hesabı (AZN)</div>
+                                        <div style="font-size: 15px;" class="font-weight-bold">1200 AZN</div>
+                                      </div>
+                                      <div class="bg-secondary p-1" style="border-radius: 10px;">
+                                        <img style="width: 50px;" src="https://www.kapitalbank.az/images/cards/D/birkart-cashback-debet1630667228.png" alt="">
+                                      </div>
+                                    </div>
+                                  </a>
+                                  <a id="arzu1kart2" class="dropdown-item" href="#">
+                                    <div class="d-flex justify-content-between align-items-center">
+                                      <div>
+                                        <div style="font-size: 15px;">Kart hesabı (USD)</div>
+                                        <div style="font-size: 15px;" class="font-weight-bold">750 USD</div>
+                                      </div>
+                                      <div class="bg-secondary p-1" style="border-radius: 10px;">
+                                        <img style="width: 50px;" src="https://www.kapitalbank.az/images/cards/D/birkart-edv-debet1637578372.png" alt="">
+                                      </div>
+                                    </div>
+                                  </a>
+                                </div>
+                              </div>
 
 
 
@@ -113,7 +142,7 @@
                 <!-- <div class="d-flex mt-2"> -->
                     <!-- <div class="d-flex justify-content-between align-items-center"> -->
                         <!-- <div class="input-group p-0 m-0\"> -->
-                            <div class="input-group mr-3">
+                            <div class="input-group mb-3">
                                 <input id="arzu2elaveetinputu" type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
                                 <div class="input-group-append">
                                   <span class="input-group-text">₼</span>
@@ -121,7 +150,35 @@
                               </div>
 
 
-
+                              <div class="dropdown  w-100">
+                                <button  id="arzu2hesablar"  class="btn btn-secondary dropdown-toggle col-12 m-0" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-expanded="false">
+                                  Hesablar
+                                </button>
+                                <div class="dropdown-menu w-100" aria-labelledby="dropdownMenuButton">
+                                  <a id="arzu2kart1" class="dropdown-item border-bottom" href="#">
+                                    <div class="d-flex justify-content-between align-items-center">
+                                      <div>
+                                        <div style="font-size: 15px;">Kart hesabı (AZN)</div>
+                                        <div style="font-size: 15px;" class="font-weight-bold">1200 AZN</div>
+                                      </div>
+                                      <div class="bg-secondary p-1" style="border-radius: 10px;">
+                                        <img style="width: 50px;" src="https://www.kapitalbank.az/images/cards/D/birkart-cashback-debet1630667228.png" alt="">
+                                      </div>
+                                    </div>
+                                  </a>
+                                  <a id="arzu2kart2" class="dropdown-item" href="#">
+                                    <div class="d-flex justify-content-between align-items-center">
+                                      <div>
+                                        <div style="font-size: 15px;">Kart hesabı (USD)</div>
+                                        <div style="font-size: 15px;" class="font-weight-bold">750 USD</div>
+                                      </div>
+                                      <div class="bg-secondary p-1" style="border-radius: 10px;">
+                                        <img style="width: 50px;" src="https://www.kapitalbank.az/images/cards/D/birkart-edv-debet1637578372.png" alt="">
+                                      </div>
+                                    </div>
+                                  </a>
+                                </div>
+                              </div>
 
 
                               <div id="arzu2" class="text-danger d-none mt-2">Zəhmət olmasa xanaları doldurun</div>
@@ -226,7 +283,7 @@
 
 
 
-      <nav class="bg-light fixed-bottom" style="margin-top: 105px; width: 375px;">
+      <nav class="bg-light fixed-bottom mb-2" style="margin-top: 105px; width: 375px;">
         <div style="position: relative; bottom: 0px;" class="d-flex justify-content-around">
             <div class="d-flex flex-column align-items-center justify-content-center m-0 p-0">
                 <i style="width: 25px; height: 25px; color: grey;" class="d-flex justify-content-center align-items-center fas fa-home m-0 p-0"></i>
