--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="./src/reset.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <link rel="stylesheet" href="./src/style.css">
     <!-- <link rel="stylesheet" href="./src/charts.min.css"> -->
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/charts.css/dist/charts.min.css"> -->
-    <link rel="stylesheet" href="https://unpkg.com/charts.css/dist/charts.min.css">
+    <!-- <link rel="stylesheet" href="https://unpkg.com/charts.css/dist/charts.min.css"> -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./src/style.css">
 </head>
 <body class="bg">
 
@@ -88,7 +88,7 @@
             </div>
         </div>
         <div class="modal-footer">
-            <button id="yaddasaxlabtnparametr" type="button" class="btn btn-success">Yadda saxla</button>
+            <button id="yaddasaxlabtnparametr" type="button" class="btn bgcolorred text-light">Yadda saxla</button>
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Bağla</button>
         </div>
       </div>
@@ -179,7 +179,7 @@
   </div>
     
   
-  <nav class="bg-light fixed-bottom" style="margin-top: 105px; width: 375px;">
+  <nav class="bg-light fixed-bottom mb-2" style="margin-top: 105px; width: 375px;">
     <div style="position: relative; bottom: 0px;" class="d-flex justify-content-around">
         <div class="d-flex flex-column align-items-center justify-content-center m-0 p-0">
             <i style="width: 25px; height: 25px; color: grey;" class="d-flex justify-content-center align-items-center fas fa-home m-0 p-0"></i>
