--- a/xerc.html
+++ b/xerc.html
@@ -172,7 +172,7 @@
 
 
 
-<nav class="bg-light fixed-bottom" style="margin-top: 105px; width: 375px;">
+<nav class="bg-light fixed-bottom mb-2 font1" style="margin-top: 105px; width: 375px;">
     <div style="position: relative; bottom: 0px;" class="d-flex justify-content-around">
         <div class="d-flex flex-column align-items-center justify-content-center m-0 p-0">
             <i style="width: 25px; height: 25px; color: grey;" class="d-flex justify-content-center align-items-center fas fa-home m-0 p-0"></i>
